cmake_minimum_required(VERSION 3.20)
project(CPrimerPlus C)

set(CMAKE_C_STANDARD 11)

# 编程练习
# 第2章
add_executable(ex2-01 exercises/ch02/ex01.c)
add_executable(ex2-03 exercises/ch02/ex03.c)
add_executable(ex2-04 exercises/ch02/ex04.c)
add_executable(ex2-05 exercises/ch02/ex05.c)
add_executable(ex2-06 exercises/ch02/ex06.c)
add_executable(ex2-07 exercises/ch02/ex07.c)
add_executable(ex2-08 exercises/ch02/ex08.c)

# 第3章
add_executable(ex3-02 exercises/ch03/ex02.c)
add_executable(ex3-03 exercises/ch03/ex03.c)
add_executable(ex3-04 exercises/ch03/ex04.c)
add_executable(ex3-05 exercises/ch03/ex05.c)
add_executable(ex3-06 exercises/ch03/ex06.c)
add_executable(ex3-07 exercises/ch03/ex07.c)
add_executable(ex3-08 exercises/ch03/ex08.c)

# 第4章
add_executable(ex4-01 exercises/ch04/ex01.c)
add_executable(ex4-02 exercises/ch04/ex02.c)
add_executable(ex4-03 exercises/ch04/ex03.c)
add_executable(ex4-04 exercises/ch04/ex04.c)
add_executable(ex4-05 exercises/ch04/ex05.c)
add_executable(ex4-06 exercises/ch04/ex06.c)
add_executable(ex4-07 exercises/ch04/ex07.c)
add_executable(ex4-08 exercises/ch04/ex08.c)

# 第5章
add_executable(ex5-01 exercises/ch05/ex01.c)
add_executable(ex5-02 exercises/ch05/ex02.c)
add_executable(ex5-03 exercises/ch05/ex03.c)
add_executable(ex5-04 exercises/ch05/ex04.c)
add_executable(ex5-05 exercises/ch05/ex05.c)
add_executable(ex5-06 exercises/ch05/ex06.c)
add_executable(ex5-07 exercises/ch05/ex07.c)
add_executable(ex5-08 exercises/ch05/ex08.c)
add_executable(ex5-09 exercises/ch05/ex09.c)

# 第6章
add_executable(ex6-01 exercises/ch06/ex01.c)
add_executable(ex6-02 exercises/ch06/ex02.c)
add_executable(ex6-03 exercises/ch06/ex03.c)
add_executable(ex6-04 exercises/ch06/ex04.c)
add_executable(ex6-05 exercises/ch06/ex05.c)
add_executable(ex6-06 exercises/ch06/ex06.c)
add_executable(ex6-07 exercises/ch06/ex07.c)
add_executable(ex6-08 exercises/ch06/ex08.c)
add_executable(ex6-09 exercises/ch06/ex09.c)
add_executable(ex6-10 exercises/ch06/ex10.c)
add_executable(ex6-11 exercises/ch06/ex11.c)
add_executable(ex6-12 exercises/ch06/ex12.c)
add_executable(ex6-13 exercises/ch06/ex13.c)
add_executable(ex6-14 exercises/ch06/ex14.c)
add_executable(ex6-15 exercises/ch06/ex15.c)
add_executable(ex6-16 exercises/ch06/ex16.c)
add_executable(ex6-17 exercises/ch06/ex17.c)
add_executable(ex6-18 exercises/ch06/ex18.c)

# 第7章
add_executable(ex7-01 exercises/ch07/ex01.c)
add_executable(ex7-02 exercises/ch07/ex02.c)
add_executable(ex7-03 exercises/ch07/ex03.c)
add_executable(ex7-04 exercises/ch07/ex04.c)
add_executable(ex7-05 exercises/ch07/ex05.c)
add_executable(ex7-06 exercises/ch07/ex06.c)
add_executable(ex7-07 exercises/ch07/ex07.c)
add_executable(ex7-08 exercises/ch07/ex08.c)
add_executable(ex7-09 exercises/ch07/ex09.c)
add_executable(ex7-10 exercises/ch07/ex10.c)
add_executable(ex7-11 exercises/ch07/ex11.c)