cmake_minimum_required(VERSION 3.20)
project(CPrimerPlus C)

set(CMAKE_C_STANDARD 11)

# 编程练习
# 第2章
add_executable(ex02-01 exercises/ch02/ex01.c)
add_executable(ex02-03 exercises/ch02/ex03.c)
add_executable(ex02-04 exercises/ch02/ex04.c)
add_executable(ex02-05 exercises/ch02/ex05.c)
add_executable(ex02-06 exercises/ch02/ex06.c)
add_executable(ex02-07 exercises/ch02/ex07.c)
add_executable(ex02-08 exercises/ch02/ex08.c)

# 第3章
add_executable(ex03-02 exercises/ch03/ex02.c)
add_executable(ex03-03 exercises/ch03/ex03.c)
add_executable(ex03-04 exercises/ch03/ex04.c)
add_executable(ex03-05 exercises/ch03/ex05.c)
add_executable(ex03-06 exercises/ch03/ex06.c)
add_executable(ex03-07 exercises/ch03/ex07.c)
add_executable(ex03-08 exercises/ch03/ex08.c)

# 第4章
add_executable(ex04-01 exercises/ch04/ex01.c)
add_executable(ex04-02 exercises/ch04/ex02.c)
add_executable(ex04-03 exercises/ch04/ex03.c)
add_executable(ex04-04 exercises/ch04/ex04.c)
add_executable(ex04-05 exercises/ch04/ex05.c)
add_executable(ex04-06 exercises/ch04/ex06.c)
add_executable(ex04-07 exercises/ch04/ex07.c)
add_executable(ex04-08 exercises/ch04/ex08.c)

# 第5章
add_executable(ex05-01 exercises/ch05/ex01.c)
add_executable(ex05-02 exercises/ch05/ex02.c)
add_executable(ex05-03 exercises/ch05/ex03.c)
add_executable(ex05-04 exercises/ch05/ex04.c)
add_executable(ex05-05 exercises/ch05/ex05.c)
add_executable(ex05-06 exercises/ch05/ex06.c)
add_executable(ex05-07 exercises/ch05/ex07.c)
add_executable(ex05-08 exercises/ch05/ex08.c)
add_executable(ex05-09 exercises/ch05/ex09.c)

# 第6章
add_executable(ex06-01 exercises/ch06/ex01.c)
add_executable(ex06-02 exercises/ch06/ex02.c)
add_executable(ex06-03 exercises/ch06/ex03.c)
add_executable(ex06-04 exercises/ch06/ex04.c)
add_executable(ex06-05 exercises/ch06/ex05.c)
add_executable(ex06-06 exercises/ch06/ex06.c)
add_executable(ex06-07 exercises/ch06/ex07.c)
add_executable(ex06-08 exercises/ch06/ex08.c)
add_executable(ex06-09 exercises/ch06/ex09.c)
add_executable(ex06-10 exercises/ch06/ex10.c)
add_executable(ex06-11 exercises/ch06/ex11.c)
add_executable(ex06-12 exercises/ch06/ex12.c)
add_executable(ex06-13 exercises/ch06/ex13.c)
add_executable(ex06-14 exercises/ch06/ex14.c)
add_executable(ex06-15 exercises/ch06/ex15.c)
add_executable(ex06-16 exercises/ch06/ex16.c)
add_executable(ex06-17 exercises/ch06/ex17.c)
add_executable(ex06-18 exercises/ch06/ex18.c)

# 第7章
add_executable(ex07-01 exercises/ch07/ex01.c)
add_executable(ex07-02 exercises/ch07/ex02.c)
add_executable(ex07-03 exercises/ch07/ex03.c)
add_executable(ex07-04 exercises/ch07/ex04.c)
add_executable(ex07-05 exercises/ch07/ex05.c)
add_executable(ex07-06 exercises/ch07/ex06.c)
add_executable(ex07-07 exercises/ch07/ex07.c)
add_executable(ex07-08 exercises/ch07/ex08.c)
add_executable(ex07-09 exercises/ch07/ex09.c)
add_executable(ex07-10 exercises/ch07/ex10.c)
add_executable(ex07-11 exercises/ch07/ex11.c)

# 第8章
add_executable(ex08-01 exercises/ch08/ex01.c)
add_executable(ex08-02 exercises/ch08/ex02.c)
add_executable(ex08-03 exercises/ch08/ex03.c)
add_executable(ex08-04 exercises/ch08/ex04.c)
add_executable(ex08-05 exercises/ch08/ex05.c)
add_executable(ex08-06 exercises/ch08/ex06.c)
add_executable(ex08-07 exercises/ch08/ex07.c)
add_executable(ex08-08 exercises/ch08/ex08.c)

# 第9章
add_executable(ex09-01 exercises/ch09/ex01.c)
add_executable(ex09-02 exercises/ch09/ex02.c)
add_executable(ex09-03 exercises/ch09/ex03.c)
add_executable(ex09-04 exercises/ch09/ex04.c)
add_executable(ex09-05 exercises/ch09/ex05.c)
add_executable(ex09-06 exercises/ch09/ex06.c)
add_executable(ex09-07 exercises/ch09/ex07.c)
add_executable(ex09-08 exercises/ch09/ex08.c)
add_executable(ex09-09 exercises/ch09/ex09.c)
add_executable(ex09-10 exercises/ch09/ex10.c)
add_executable(ex09-11 exercises/ch09/ex11.c)

# 第10章
add_executable(ex10-01 exercises/ch10/ex01.c)
add_executable(ex10-02 exercises/ch10/ex02.c)
add_executable(ex10-03 exercises/ch10/ex03.c)
add_executable(ex10-04 exercises/ch10/ex04.c)
add_executable(ex10-05 exercises/ch10/ex05.c)
add_executable(ex10-06 exercises/ch10/ex06.c)
add_executable(ex10-07 exercises/ch10/ex07.c)
add_executable(ex10-08 exercises/ch10/ex08.c)
add_executable(ex10-09 exercises/ch10/ex09.c)
add_executable(ex10-10 exercises/ch10/ex10.c)
add_executable(ex10-11 exercises/ch10/ex11.c)
add_executable(ex10-12 exercises/ch10/ex12.c)
add_executable(ex10-13 exercises/ch10/ex13.c)
add_executable(ex10-14 exercises/ch10/ex14.c)

# 第11章
add_executable(ex11-01 exercises/ch11/ex01.c)
add_executable(ex11-02 exercises/ch11/ex02.c)
add_executable(ex11-03 exercises/ch11/ex03.c)
add_executable(ex11-04 exercises/ch11/ex04.c)
add_executable(ex11-05 exercises/ch11/ex05.c)
add_executable(ex11-06 exercises/ch11/ex06.c)
add_executable(ex11-07 exercises/ch11/ex07.c)
add_executable(ex11-08 exercises/ch11/ex08.c)
add_executable(ex11-09 exercises/ch11/ex09.c)
add_executable(ex11-10 exercises/ch11/ex10.c)
add_executable(ex11-11 exercises/ch11/ex11.c)
add_executable(ex11-12 exercises/ch11/ex12.c)
add_executable(ex11-13 exercises/ch11/ex13.c)
add_executable(ex11-14 exercises/ch11/ex14.c)
add_executable(ex11-15 exercises/ch11/ex15.c)
add_executable(ex11-16 exercises/ch11/ex16.c)

