cmake_minimum_required(VERSION 3.20)
project(CPrimerPlus C)

set(CMAKE_C_STANDARD 11)

# 编程练习
# 第2章
add_executable(ex02-01 exercises/ch02/ex01.c)
add_executable(ex02-03 exercises/ch02/ex03.c)
add_executable(ex02-04 exercises/ch02/ex04.c)
add_executable(ex02-05 exercises/ch02/ex05.c)
add_executable(ex02-06 exercises/ch02/ex06.c)
add_executable(ex02-07 exercises/ch02/ex07.c)
add_executable(ex02-08 exercises/ch02/ex08.c)

# 第3章
add_executable(ex03-02 exercises/ch03/ex02.c)
add_executable(ex03-03 exercises/ch03/ex03.c)
add_executable(ex03-04 exercises/ch03/ex04.c)
add_executable(ex03-05 exercises/ch03/ex05.c)
add_executable(ex03-06 exercises/ch03/ex06.c)
add_executable(ex03-07 exercises/ch03/ex07.c)
add_executable(ex03-08 exercises/ch03/ex08.c)

# 第4章
add_executable(ex04-01 exercises/ch04/ex01.c)
add_executable(ex04-02 exercises/ch04/ex02.c)
add_executable(ex04-03 exercises/ch04/ex03.c)
add_executable(ex04-04 exercises/ch04/ex04.c)
add_executable(ex04-05 exercises/ch04/ex05.c)
add_executable(ex04-06 exercises/ch04/ex06.c)
add_executable(ex04-07 exercises/ch04/ex07.c)
add_executable(ex04-08 exercises/ch04/ex08.c)

# 第5章
add_executable(ex05-01 exercises/ch05/ex01.c)
add_executable(ex05-02 exercises/ch05/ex02.c)
add_executable(ex05-03 exercises/ch05/ex03.c)
add_executable(ex05-04 exercises/ch05/ex04.c)
add_executable(ex05-05 exercises/ch05/ex05.c)
add_executable(ex05-06 exercises/ch05/ex06.c)
add_executable(ex05-07 exercises/ch05/ex07.c)
add_executable(ex05-08 exercises/ch05/ex08.c)
add_executable(ex05-09 exercises/ch05/ex09.c)

# 第6章
add_executable(ex06-01 exercises/ch06/ex01.c)
add_executable(ex06-02 exercises/ch06/ex02.c)
add_executable(ex06-03 exercises/ch06/ex03.c)
add_executable(ex06-04 exercises/ch06/ex04.c)
add_executable(ex06-05 exercises/ch06/ex05.c)
add_executable(ex06-06 exercises/ch06/ex06.c)
add_executable(ex06-07 exercises/ch06/ex07.c)
add_executable(ex06-08 exercises/ch06/ex08.c)
add_executable(ex06-09 exercises/ch06/ex09.c)
add_executable(ex06-10 exercises/ch06/ex10.c)
add_executable(ex06-11 exercises/ch06/ex11.c)
add_executable(ex06-12 exercises/ch06/ex12.c)
add_executable(ex06-13 exercises/ch06/ex13.c)
add_executable(ex06-14 exercises/ch06/ex14.c)
add_executable(ex06-15 exercises/ch06/ex15.c)
add_executable(ex06-16 exercises/ch06/ex16.c)
add_executable(ex06-17 exercises/ch06/ex17.c)
add_executable(ex06-18 exercises/ch06/ex18.c)

# 第7章
add_executable(ex07-01 exercises/ch07/ex01.c)
add_executable(ex07-02 exercises/ch07/ex02.c)
add_executable(ex07-03 exercises/ch07/ex03.c)
add_executable(ex07-04 exercises/ch07/ex04.c)
add_executable(ex07-05 exercises/ch07/ex05.c)
add_executable(ex07-06 exercises/ch07/ex06.c)
add_executable(ex07-07 exercises/ch07/ex07.c)
add_executable(ex07-08 exercises/ch07/ex08.c)
add_executable(ex07-09 exercises/ch07/ex09.c)
add_executable(ex07-10 exercises/ch07/ex10.c)
add_executable(ex07-11 exercises/ch07/ex11.c)

# 第8章
add_executable(ex08-01 exercises/ch08/ex01.c)
add_executable(ex08-02 exercises/ch08/ex02.c)
add_executable(ex08-03 exercises/ch08/ex03.c)
add_executable(ex08-04 exercises/ch08/ex04.c)
add_executable(ex08-05 exercises/ch08/ex05.c)
add_executable(ex08-06 exercises/ch08/ex06.c)
add_executable(ex08-07 exercises/ch08/ex07.c)
add_executable(ex08-08 exercises/ch08/ex08.c)

# 第9章
add_executable(ex09-01 exercises/ch09/ex01.c)
add_executable(ex09-02 exercises/ch09/ex02.c)
add_executable(ex09-03 exercises/ch09/ex03.c)
add_executable(ex09-04 exercises/ch09/ex04.c)
add_executable(ex09-05 exercises/ch09/ex05.c)
add_executable(ex09-06 exercises/ch09/ex06.c)
add_executable(ex09-07 exercises/ch09/ex07.c)
add_executable(ex09-08 exercises/ch09/ex08.c)
add_executable(ex09-09 exercises/ch09/ex09.c)
add_executable(ex09-10 exercises/ch09/ex10.c)
add_executable(ex09-11 exercises/ch09/ex11.c)

# 第10章
add_executable(ex10-01 exercises/ch10/ex01.c)
add_executable(ex10-02 exercises/ch10/ex02.c)
add_executable(ex10-03 exercises/ch10/ex03.c)
add_executable(ex10-04 exercises/ch10/ex04.c)
add_executable(ex10-05 exercises/ch10/ex05.c)
add_executable(ex10-06 exercises/ch10/ex06.c)
add_executable(ex10-07 exercises/ch10/ex07.c)
add_executable(ex10-08 exercises/ch10/ex08.c)
add_executable(ex10-09 exercises/ch10/ex09.c)
add_executable(ex10-10 exercises/ch10/ex10.c)
add_executable(ex10-11 exercises/ch10/ex11.c)
add_executable(ex10-12 exercises/ch10/ex12.c)
add_executable(ex10-13 exercises/ch10/ex13.c)
add_executable(ex10-14 exercises/ch10/ex14.c)

# 第11章
add_executable(ex11-01 exercises/ch11/ex01.c)
add_executable(ex11-02 exercises/ch11/ex02.c)
add_executable(ex11-03 exercises/ch11/ex03.c)
add_executable(ex11-04 exercises/ch11/ex04.c)
add_executable(ex11-05 exercises/ch11/ex05.c)
add_executable(ex11-06 exercises/ch11/ex06.c)
add_executable(ex11-07 exercises/ch11/ex07.c)
add_executable(ex11-08 exercises/ch11/ex08.c)
add_executable(ex11-09 exercises/ch11/ex09.c)
add_executable(ex11-10 exercises/ch11/ex10.c)
add_executable(ex11-11 exercises/ch11/ex11.c)
add_executable(ex11-12 exercises/ch11/ex12.c)
add_executable(ex11-13 exercises/ch11/ex13.c)
add_executable(ex11-14 exercises/ch11/ex14.c)
add_executable(ex11-15 exercises/ch11/ex15.c)
add_executable(ex11-16 exercises/ch11/ex16.c)

# 第12章
add_executable(ex12-01 exercises/ch12/ex01.c)
add_executable(ex12-02 exercises/ch12/ex02/pe12-2b.c exercises/ch12/ex02/pe12-2a.c)
add_executable(ex12-03 exercises/ch12/ex03/pe12-3b.c exercises/ch12/ex03/pe12-3a.c)
add_executable(ex12-04 exercises/ch12/ex04.c)
add_executable(ex12-05 exercises/ch12/ex05.c)
add_executable(ex12-06 exercises/ch12/ex06/ex06.c exercises/ch12/ex06/s_and_r.c)
add_executable(ex12-07 exercises/ch12/ex07.c)
add_executable(ex12-08 exercises/ch12/ex08.c)
add_executable(ex12-09 exercises/ch12/ex09.c)

# 第13章
add_executable(ex13-01 exercises/ch13/ex01.c)
add_executable(ex13-02 exercises/ch13/ex02.c)
add_executable(ex13-03 exercises/ch13/ex03.c)
add_executable(ex13-04 exercises/ch13/ex04.c)
add_executable(ex13-05 exercises/ch13/ex05.c)
add_executable(ex13-06 exercises/ch13/ex06.c)
add_executable(ex13-07-a exercises/ch13/ex07-a.c)
add_executable(ex13-07-b exercises/ch13/ex07-b.c)
add_executable(ex13-08 exercises/ch13/ex08.c)
add_executable(ex13-09 exercises/ch13/ex09.c)
add_executable(ex13-10 exercises/ch13/ex10.c)
add_executable(ex13-11 exercises/ch13/ex11.c)
add_executable(ex13-12 exercises/ch13/ex12.c)
add_executable(ex13-13 exercises/ch13/ex13.c)
add_executable(ex13-14 exercises/ch13/ex14.c)

# 第14章
add_executable(ex14-01 exercises/ch14/ex01.c)
add_executable(ex14-02 exercises/ch14/ex02.c)
add_executable(ex14-03 exercises/ch14/ex03.c)
add_executable(ex14-04-a exercises/ch14/ex04-a.c)
add_executable(ex14-04-b exercises/ch14/ex04-b.c)
add_executable(ex14-05 exercises/ch14/ex05.c)
add_executable(ex14-06 exercises/ch14/ex06.c)
add_executable(ex14-07 exercises/ch14/ex07.c)
#add_executable(create-book-data exercises/ch14/files/create-book-data.c)
add_executable(ex14-08 exercises/ch14/ex08.c)
add_executable(ex14-09 exercises/ch14/ex09.c)
add_executable(ex14-10 exercises/ch14/ex10.c)
add_executable(ex14-11 exercises/ch14/ex11.c)

# 第15章
add_executable(ex15-01 exercises/ch15/ex01.c)
add_executable(ex15-02 exercises/ch15/ex02.c)
add_executable(ex15-03 exercises/ch15/ex03.c)
add_executable(ex15-04 exercises/ch15/ex04.c)
add_executable(ex15-05 exercises/ch15/ex05.c)
add_executable(ex15-06 exercises/ch15/ex06.c)
add_executable(ex15-07 exercises/ch15/ex07.c)

# 第16章
add_executable(ex16-02 exercises/ch16/ex02.c)
add_executable(ex16-03 exercises/ch16/ex03.c)